test: MemberTagService의 findByMember(), updateMemberTag() 메서드에 대한 테스트 코드 작성
#1286